fixing layout bugs in detail grid

--- a/frontend/src/components/FirstJourneyStepComponent.module.css
+++ b/frontend/src/components/FirstJourneyStepComponent.module.css
@@ -36,3 +36,7 @@
 .bold {
   font-weight: bold;
 }
+
+.track {
+  padding-left: 1em;
+}
